--- a/src/card/card.css
+++ b/src/card/card.css
@@ -1,5 +1,21 @@
 #card-list{
-  width: 500px;
+  display: flex;
+  flex-wrap: wrap;
   padding: 0;
-  margin: 0 auto;
+}
+.card{
+  flex-basis: 24%;
+  margin: 4px 5px;
+}
+.card-temp{
+  font-size: 27px;
+  margin-left: 5px;
+}
+.card-wind{
+  float: right;
+  font-size: 27px;
+}
+.card-description{
+  font-size: 20px;
+  font-weight: bold;
 }
